Implemented spark into this project